force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/FlexiChk__Checklist_Template_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Checklist Template Assignment Rule</label>
    <nameField>
        <displayFormat>TRULE-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Template Assignment Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>