force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/fields/FlexiChk__Checklist_Template_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist_Template_Assignment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template Assignment Group</label>
    <referenceTo>FlexiChk__Checklist_Template_Assignment_Group__c</referenceTo>
    <relationshipLabel>Checklist Template Assignment Rules</relationshipLabel>
    <relationshipName>Checklist_Template_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>