force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/fields/FlexiChk__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>