force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/fields/FlexiChk__Operator__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlexiChk__Operator</valueSetName>
    </valueSet>
</CustomField>