force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/fields/FlexiChk__Order__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>