force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/fields/FlexiChk__Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Record_Type_Developer_Name__c</fullName>
    <label>Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>