force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/fields/FlexiChk__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Related_Object__c</fullName>
    <label>Related Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>