force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Rule__c/fields/FlexiChk__Value__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Value__c</fullName>
    <label>Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>